# citation-tool

./: .editorconfig  CONTRIBUTING.md  LICENSE  README.md  citation-tool.sln
CitationTool.Client/: App.razor  CitationTool.Client.csproj  Program.cs  _Imports.razor
CitationTool.Client/Layout/: MainLayout.razor  NavMenu.razor
CitationTool.Client/Models/: Citation.cs  Domain.cs  FilterOptions.cs  ImportExportModels.cs  SavedSearch.cs  UrlHealthStatus.cs
CitationTool.Client/Pages/: Citations.razor  Domains.razor  Export.razor  Help.razor  Home.razor  Import.razor  Settings.razor
CitationTool.Client/Properties/: launchSettings.json
CitationTool.Client/Services/: BibTexParserService.cs  CitationService.cs  DoiLookupService.cs  DomainService.cs  DuplicateDetectionService.cs  IAppStateService.cs  IBibTexParserService.cs  ICitationService.cs  IDoiLookupService.cs  IDomainService.cs  IDuplicateDetectionService.cs  IImportExportService.cs  ISavedSearchService.cs  IStorageService.cs  IUrlHealthService.cs  ImportExportService.cs  IndexedDbStorageService.cs  SavedSearchService.cs  SeedDataService.cs  UrlHealthService.cs
CitationTool.Client/Validators/: CitationValidator.cs  DomainValidator.cs
CitationTool.Client/wwwroot/: index.html
CitationTool.McpServer/: CitationTool.McpServer.csproj  Program.cs
CitationTool.McpServer/Mcp/: McpServer.cs  McpTypes.cs
CitationTool.McpServer/Services/: CitationDataService.cs
CitationTool.Shared/: CitationTool.Shared.csproj
CitationTool.Shared/Models/: Citation.cs  (+3 more)
python/: README.md  pyproject.toml
python/citation_tool/: __init__.py  library.py  models.py
python/examples/: basic_usage.py
scripts/: setup-mcp.sh
(+15 files in other folders)
